fix buttons on mobile

--- a/main.css
+++ b/main.css
@@ -27,6 +27,10 @@
         text-align: center;
     }
 
+    input {
+        -webkit-appearance: none;
+    }
+
     .button {
         border: 0px;
         padding: 0px;
